# Init

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  setup.py
data/jamstack/: .gitattributes  init.json  package.json  tsconfig.json
data/jamstack/src/: index.html
data/jamstack/src/compiled/styles/: main.css
data/jamstack/src/styles/: main.scss
data/python/: init.json  setup.py
data/python/.github/workflows/: test.yml
data/rust/: init.json
src/: init.rs  main.rs  parse.rs
