[package]
name = "init"
version = "0.1.0"
authors = ["William Henderson <william-henderson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.6.0"